@@ -884,9 +884,65 @@ public class JCommanderTest {
     Assert.assertEquals(command, "--configure");
   }
 
+  public void abbreviatedOptions() {
+    class Arg {
+      @Parameter(names = { "-p", "--param" })
+      private String param;
+    }
+    Arg a = new Arg();
+    JCommander jc = new JCommander(a);
+    jc.setAllowAbbreviatedOptions(true);
+    jc.parse(new String[] { "--par", "foo" });
+    Assert.assertEquals(a.param, "foo");
+  }
+
+  public void abbreviatedOptionsCaseInsensitive() {
+    class Arg {
+      @Parameter(names = { "-p", "--param" })
+      private String param;
+    }
+    Arg a = new Arg();
+    JCommander jc = new JCommander(a);
+    jc.setCaseSensitiveOptions(false);
+    jc.setAllowAbbreviatedOptions(true);
+    jc.parse(new String[] { "--PAR", "foo" });
+    Assert.assertEquals(a.param, "foo");
+  }
+
+  @Test(expectedExceptions = ParameterException.class)
+  public void ambiguousAbbreviatedOptions() {
+    class Arg {
+      @Parameter(names = { "--param" })
+      private String param;
+      @Parameter(names = { "--parb" })
+      private String parb;
+    }
+    Arg a = new Arg();
+    JCommander jc = new JCommander(a);
+    jc.setAllowAbbreviatedOptions(true);
+    jc.parse(new String[] { "--par", "foo" });
+    Assert.assertEquals(a.param, "foo");
+  }
+
+  @Test(expectedExceptions = ParameterException.class)
+  public void ambiguousAbbreviatedOptionsCaseInsensitive() {
+    class Arg {
+      @Parameter(names = { "--param" })
+      private String param;
+      @Parameter(names = { "--parb" })
+      private String parb;
+    }
+    Arg a = new Arg();
+    JCommander jc = new JCommander(a);
+    jc.setCaseSensitiveOptions(false);
+    jc.setAllowAbbreviatedOptions(true);
+    jc.parse(new String[] { "--PAR", "foo" });
+    Assert.assertEquals(a.param, "foo");
+  }
+
   @Test(enabled = false)
   public static void main(String[] args) throws Exception {
-    new JCommanderTest().caseInsensitiveCommand();
+    new JCommanderTest().ambiguousAbbreviatedOptionsCaseInsensitive();
 //    class A {
 //      @Parameter(names = "-short", required = true)
 //      List<String> parameters;
